fix: dropdown-menu on mobile devices

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -107,6 +107,7 @@ link:focus,
   .dropdown {
     &:hover {
       .dropdown-menu {
+        display: block;
         visibility: visible;
         opacity: 1;
         transform: translateY(0)
